--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+ <!-- "THE BEER-WARE LICENSE" (Revision 42): -->
+ <!-- Marco Ziegaus <github@marcoziegaus.de> wrote this file. As long as you retain this notice you -->
+ <!-- can do whatever you want with this stuff. If we meet some day, and you think -->
+ <!-- this stuff is worth it, you can buy me a beer in return. Cheers! Marco -->
+
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
